DevTools: fix screenshots on mac headless while emulating.

Bug: 741969
Change-Id: Id80b178aee043babd25a533e21fc25118a446d77
Reviewed-on: https://chromium-review.googlesource.com/572424
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Pavel Feldman <pfeldman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486940}
Former-commit-id: 73e7faeab75df27cd159b5352518d1480989d198